Introduce terraform_projects table and stop using "estate"
