# src/canoe/app/controllers/api/terraform_controller.rb
@@ -3,10 +3,7 @@ module Api
     skip_before_action :require_api_authentication
     before_action :require_email_authentication
     before_action :require_phone_authentication, only: [:create]
-
-    class << self
-      attr_accessor :notifier
-    end
+    before_action :require_terraform_project
 
     def create
       build = TerraformBuild.new(
@@ -14,13 +11,13 @@ module Api
         proto_request.commit,
         proto_request.terraform_version
       )
-      response = project.deploy(current_user, proto_request.estate, build)
+      response = terraform_project.deploy(current_user, build)
 
       render json: response.as_json
     end
 
     def complete
-      response = project.complete_deploy(
+      response = terraform_project.complete_deploy(
         proto_request.request_id,
         proto_request.successful
       )
@@ -37,6 +34,20 @@ module Api
       end
     end
 
+    def require_terraform_project
+      unless terraform_project
+        render status: 404, json: TerraformDeployResponse.unknown_project(proto_request.project).as_json
+      end
+    end
+
+    def terraform_project
+      if defined?(@terraform_project)
+        return @terraform_project
+      end
+
+      @terraform_project = TerraformProject.find_by_name(proto_request.project)
+    end
+
     def current_user
       @terraform_current_user ||= AuthUser.find_by_email(proto_request.user_email)
     end
@@ -51,10 +62,6 @@ module Api
         else
           raise "Unable to handle RPC call: #{params[:action].inspect}"
         end
-    end
-
-    def project
-      @project ||= TerraformProject.find!(TerraformController.notifier)
     end
   end
 end
