# src/canoe/app/models/terraform_deploy_response.rb
@@ -1,10 +1,10 @@
 class TerraformDeployResponse
   def self.locked(deploy)
-    new(deploy, "Terraform estate #{deploy.estate_name.inspect} is locked by #{deploy.user_name}")
+    new(deploy, "Terraform estate #{deploy.project_name.inspect} is locked by #{deploy.user_name}")
   end
 
-  def self.unknown_estate(name)
-    new(nil, "Unknown Terraform estate: #{name.inspect}")
+  def self.unknown_project(name)
+    new(nil, "Unknown Terraform project: #{name.inspect}")
   end
 
   def self.success(deploy)
@@ -14,6 +14,7 @@ class TerraformDeployResponse
   def initialize(deploy, error_message)
     @deploy_id = deploy.try(:id)
     @request_id = deploy.try(:request_id)
+    @project = deploy.try(:terraform_project).try(:name).to_s
     @error_message = error_message
   end
 
@@ -31,6 +32,7 @@ class TerraformDeployResponse
     Canoe::TerraformDeployResponse.new(
       error: !@error_message.to_s.empty?,
       message: @error_message,
+      project: @project,
       deploy_id: @deploy_id.to_i,
       request_id: @request_id.to_s,
     )
