# src/canoe/app/models/terraform_project.rb
@@ -1,68 +1,30 @@
-class TerraformProject
-  NAME = "terraform".freeze
+class TerraformProject < ActiveRecord::Base
+  belongs_to :project
+  has_many :terraform_deploys
 
-  ESTATES = [
-    "aws/pardot",
-    "aws/pardot-atlassian",
-    "aws/pardot-ci",
-    "aws/pardot-qe",
-    "aws/pardotops",
-    "aws/pardotpublic"
-  ].freeze
-
-  def self.required_version
-    @required_version ||= Pathname("../../../config/terraform-version")
+  cattr_accessor :required_version do
+    Pathname("../../../config/terraform-version")
       .expand_path(__FILE__).read.chomp
   end
 
-  class << self
-    attr_writer :required_version
+  cattr_accessor :notifier do
+    HipchatNotifier.new
   end
 
-  def self.find!(notifier = nil)
-    notifier ||= HipchatNotifier.new
-    project = Project.find_by!(name: NAME)
-
-    new(project, notifier)
-  end
-
-  def self.create!
-    Project.find_or_create_by!(name: NAME) do |project|
-      project.icon = "server"
-      project.bamboo_project = "BREAD"
-      project.bamboo_plan = "BREAD"
-      project.bamboo_job = "TER"
-      project.repository = "Pardot/bread"
-    end
-  end
-
-  def initialize(project, notifier)
-    @project = project
-    @notifier = notifier
-  end
-
-  def deploy(user, estate, build)
-    unless ESTATES.include?(estate)
-      return TerraformDeployResponse.unknown_estate(estate)
-    end
-
-    if build.terraform_version != TerraformProject.required_version
+  def deploy(user, build)
+    if build.terraform_version != required_version
       error = "Terraform version #{build.terraform_version} does not " \
-        "match required version: #{TerraformProject.required_version}"
+        "match required version: #{required_version}"
       return TerraformDeployResponse.new(nil, error)
     end
 
-    deploy = TerraformDeploy.transaction do
-      deploys = TerraformDeploy.pending(estate)
-
-      if deploys.count > 0
-        return TerraformDeployResponse.locked(deploys.first!)
+    deploy = transaction do
+      if terraform_deploys.pending.count > 0
+        return TerraformDeployResponse.locked(terraform_deploys.first!)
       end
 
-      TerraformDeploy.create!(
-        project_id: @project.id,
-        auth_user_id: user.id,
-        estate_name: estate,
+      terraform_deploys.create!(
+        auth_user: user,
         branch_name: build.branch,
         commit_sha1: build.commit,
         terraform_version: build.terraform_version,
@@ -92,13 +54,17 @@ class TerraformProject
     TerraformDeployResponse.success(deploy)
   end
 
+  def deploy_notifications
+    project.deploy_notifications
+  end
+
   private
 
   def notification
-    TerraformNotification.new(@notifier, room_ids)
+    TerraformNotification.new(notifier, room_ids)
   end
 
   def room_ids
-    @project.deploy_notifications.map(&:hipchat_room_id)
+    deploy_notifications.map(&:hipchat_room_id)
   end
 end
